workspace = { members = ["demo"] }

[package]
name = "egui-snarl"
version = "0.6.0"
edition = "2021"
description = "Node-graphs for egui"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-snarl"
repository = "https://github.com/zakarumych/egui-snarl"
readme = "README.md"
keywords = ["egui", "node", "graph", "ui", "node-graph"]
categories = ["gui", "visualization"]
rust-version = "1.81"

[features]
serde = ["dep:serde", "egui/serde", "slab/serde"]

[dependencies]
egui = { version = "0.30" }
slab = { version = "0.4" }
serde = { version = "1.0", features = ["derive"], optional = true }

egui-probe = { version = "0.7.0", features = ["derive"], optional = true }

[dev-dependencies]
eframe = { version = "0.30", features = ["serde", "persistence"] }
egui_extras = { version = "0.30", features = ["all_loaders"] }
syn = { version = "2.0", features = ["extra-traits"] }
serde_json = { version = "1.0" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"

[[example]]
name = "demo"
required-features = ["serde", "egui-probe"]
