
[workspace]
members = ["demo"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-snarl"
repository = "https://github.com/zakarumych/egui-snarl"

[package]
name = "egui-snarl"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true

description = "Node-graphs for egui"
readme = "README.md"
keywords = ["egui", "node", "graph", "ui", "node-graph"]
categories = ["gui", "visualization"]

[features]
serde = ["dep:serde", "egui/serde", "slab/serde"]

[dependencies]
egui = { version = "0.31" }
slab = { version = "0.4" }
serde = { version = "1", features = ["derive"], optional = true }

egui-probe = { version = "0.8.0", features = ["derive"], optional = true }
egui-scale = { version = "0.1.0" }

[dev-dependencies]
eframe = { version = "0.31", features = ["serde", "persistence"] }
egui_extras = { version = "0.31", features = ["all_loaders"] }
syn = { version = "2", features = ["extra-traits"] }
serde_json = { version = "1" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4"

[[example]]
name = "demo"
required-features = ["serde", "egui-probe"]

# [patch.crates-io]
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
# egui_extras = { path = "../egui/crates/egui_extras" }