
[workspace]
members = ["demo"]
resolver = "3"

[workspace.package]
rust-version = "1.85"
edition = "2024"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui-snarl"
repository = "https://github.com/zakarumych/egui-snarl"

[workspace.dependencies]
egui = { version = "0.31" }
eframe = { version = "0.31" }
egui_extras = { version = "0.31" }
syn = { version = "2" }
serde = { version = "1" }
serde_json = { version = "1" }

egui-probe = { version = "0.8.0", git = "https://github.com/zakarumych/egui-probe", branch = "main" }
egui-scale = { version = "0.1.0" }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[package]
name = "egui-snarl"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Node-graphs for egui"
readme = "README.md"
keywords = ["egui", "node", "graph", "ui", "node-graph"]
categories = ["gui", "visualization"]

[features]
serde = ["dep:serde", "egui/serde", "slab/serde"]

[dependencies]
egui.workspace = true
slab = { version = "0.4" }
serde = { workspace = true, features = ["derive"], optional = true }
smallvec = { version = "1.15", features = ["const_new"] }

egui-probe = { workspace = true, features = ["derive"], optional = true }
egui-scale.workspace = true

[dev-dependencies]
eframe = { workspace = true, features = ["serde", "persistence"] }
egui_extras = { workspace = true, features = ["all_loaders"] }
serde_json.workspace = true
syn = { workspace = true, features = ["extra-traits"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures.workspace = true

[[example]]
name = "demo"
required-features = ["serde", "egui-probe"]
