[package]
name = "demo"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "demo"
path = "../examples/demo.rs"

[dependencies]
egui = { version = "0.30" }
egui-probe = { version = "0.7", features = ["derive"] }
eframe = { version = "0.30", features = ["serde", "persistence"] }
egui_extras = { version = "0.30", features = ["all_loaders"] }
syn = { version = "2.0", features = ["extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
egui-snarl = { path = "..", features = ["egui-probe", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
