[package]
name = "demo"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "demo"
path = "../examples/demo.rs"

[dependencies]
egui.workspace = true
egui-probe = { workspace = true, features = ["derive"] }
eframe = { workspace = true, features = ["serde", "persistence"] }
egui_extras = { workspace = true, features = ["all_loaders"] }
syn = { workspace = true, features = ["extra-traits"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

egui-snarl = { path = "..", features = ["egui-probe", "serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
